--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "@typescript-eslint/no-empty-function": "off"
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-empty-interface": "off"
   }
 }
