--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "lint:fix": "npm run lint --fix",
     "prepare": "husky install",
     "test": "jest",
+    "generate": "npm run generate:server && npm run generate:validators && npm run generate:format",
+    "generate:server": "openapi-to-server --input swagger.json --output src/.generated/operations.d.ts",
+    "generate:validators": "openapi-to-zod --input swagger.json --output src/.generated/validators.ts",
+    "generate:format": "prettier --write \"src/.generated/**/*.{js,ts}\" --no-error-on-unmatched-pattern",
     "postinstall": "husky install"
   },
   "config": {
@@ -42,14 +46,17 @@
     ]
   },
   "dependencies": {
-    "@prisma/client": "^4.15.0",
-    "@ibabkin/ts-request-mediator": "^0.9.6",
+    "@ibabkin/openapi-to-server": "^1.1.2",
+    "@ibabkin/openapi-to-zod": "^1.1.0",
     "@ibabkin/ts-constructor-injector": "^4.0.6",
     "@ibabkin/ts-ioc-container": "^23.2.7",
+    "@ibabkin/ts-request-mediator": "^0.9.6",
+    "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
     "body-parser": "~1.20.2",
     "dotenv": "^16.1.4",
     "express": "~4.18.2",
+    "openapi-types": "^12.1.3",
     "reflect-metadata": "^0.1.13",
     "standard-http-error": "^2.0.1",
     "winston": "^3.9.0",
