--- a/package.json
+++ b/package.json
@@ -92,5 +92,6 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
-  "author": "ibabkin <igor@klikkie.com>"
+  "author": "ibabkin <igor@klikkie.com>",
+  "license": "ISC"
 }
