--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "lint:fix": "npm run lint --fix",
     "prepare": "husky install",
     "test": "jest",
-    "generate": "npm run generate:server && npm run generate:validators && npm run generate:format",
-    "generate:server": "openapi-to-server --input swagger.json --output src/.generated/operations.d.ts",
-    "generate:validators": "openapi-to-zod --input swagger.json --output src/.generated/validators.ts",
+    "generate": "npm run generate:swagger:yaml && npm run generate:server && npm run generate:client && npm run generate:validators && npm run generate:format",
+    "generate:server": "openapi-to-server --input src/.generated/swagger.yaml --output src/.generated/operations.d.ts",
+    "generate:client": "openapi-to-client --input src/.generated/swagger.yaml --output src/.generated/client.ts",
+    "generate:validators": "openapi-to-zod --input src/.generated/swagger.yaml --output src/.generated/validators.ts",
     "generate:format": "prettier --write \"src/.generated/**/*.{js,ts}\" --no-error-on-unmatched-pattern",
+    "generate:swagger:yaml": "yimp --input src/swagger.yaml --output src/.generated/swagger.yaml",
     "postinstall": "husky install"
   },
   "config": {
@@ -34,7 +36,7 @@
     }
   },
   "engines": {
-    "node": "18.16.x"
+    "node": "16.20.x"
   },
   "lint-staged": {
     "*.{js,ts}": [
@@ -46,8 +48,6 @@
     ]
   },
   "dependencies": {
-    "@ibabkin/openapi-to-server": "^1.1.6",
-    "@ibabkin/openapi-to-zod": "^1.1.4",
     "@ibabkin/ts-constructor-injector": "^4.0.6",
     "@ibabkin/ts-ioc-container": "^23.2.7",
     "@ibabkin/ts-request-mediator": "^0.9.6",
@@ -66,6 +66,8 @@
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@faker-js/faker": "^8.0.2",
+    "@ibabkin/openapi-to-server": "^1.3.7",
+    "@ibabkin/openapi-to-zod": "^1.1.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
@@ -82,16 +84,19 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "js-yaml": "^4.1.0",
     "lint-staged": "^13.2.2",
     "moq.ts": "^7.4.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "prisma": "^4.15.0",
     "rimraf": "^3.0.2",
+    "swagger-client": "^3.19.8",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "yaml-import": "^2.0.0"
   },
-  "author": "ibabkin <igor@klikkie.com>",
+  "author": "ibabkin <igba14@gmail.com>",
   "license": "ISC"
 }
