--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "backend-template",
+  "name": "@ibabkin/backend-template",
   "version": "1.0.0",
-  "private": true,
+  "main": "esm/client.js",
+  "module": "esm/client.js",
+  "types": "esm/client.d.ts",
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
@@ -28,6 +30,7 @@
     "generate:validators": "openapi-to-zod --input src/.generated/swagger.yaml --output src/.generated/validators.ts",
     "generate:format": "prettier --write \"src/.generated/**/*.{js,ts}\" --no-error-on-unmatched-pattern",
     "generate:swagger:yaml": "yimp --input src/swagger.yaml --output src/.generated/swagger.yaml",
+    "build:package": "rimraf esm && tsc -p tsconfig.client.json --outDir esm",
     "postinstall": "husky install"
   },
   "config": {
@@ -38,6 +41,9 @@
   "engines": {
     "node": "16.20.x"
   },
+  "files": [
+    "esm/**/*"
+  ],
   "lint-staged": {
     "*.{js,ts}": [
       "eslint --cache --fix",
@@ -66,7 +72,7 @@
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@faker-js/faker": "^8.0.2",
-    "@ibabkin/openapi-to-server": "^1.3.7",
+    "@ibabkin/openapi-to-server": "^1.3.8",
     "@ibabkin/openapi-to-zod": "^1.1.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
