--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     ]
   },
   "dependencies": {
-    "@ibabkin/ts-constructor-injector": "^4.0.6",
-    "@ibabkin/ts-ioc-container": "^23.2.7",
-    "@ibabkin/ts-request-mediator": "^0.9.6",
+    "ts-constructor-injector": "^4.0.2",
+    "ts-ioc-container": "^23.2.8",
+    "ts-request-mediator": "^0.9.7",
     "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
     "body-parser": "~1.20.2",
@@ -73,7 +73,7 @@
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@faker-js/faker": "^8.0.2",
-    "@ibabkin/openapi-to-server": "^1.3.8",
+    "@ibabkin/openapi-to-server": "^1.3.10",
     "@ibabkin/openapi-to-zod": "^1.1.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
