--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
     "lint:fix": "npm run lint --fix",
     "prepare": "husky install",
     "test": "jest",
-    "generate": "npm run generate:swagger:yaml && npm run generate:server && npm run generate:client && npm run generate:validators && npm run generate:format",
-    "generate:server": "openapi-to-server --input src/.generated/swagger.yaml --output src/.generated/operations.d.ts",
-    "generate:client": "openapi-to-client --input src/.generated/swagger.yaml --output src/.generated/client.ts",
-    "generate:validators": "openapi-to-zod --input src/.generated/swagger.yaml --output src/.generated/validators.ts",
+    "generate": "npm run generate:server && npm run generate:client && npm run generate:validators && npm run generate:format",
+    "generate:server": "openapi-to-server --input src/swagger.yaml --output src/.generated/operations.d.ts --json true",
+    "generate:client": "openapi-to-client --input src/swagger.yaml --output src/.generated/client.ts",
+    "generate:validators": "openapi-to-zod --input src/swagger.yaml --output src/.generated/validators.ts",
     "generate:format": "prettier --write \"src/.generated/**/*.{js,ts}\" --no-error-on-unmatched-pattern",
-    "generate:swagger:yaml": "yimp --input src/swagger.yaml --output src/.generated/swagger.yaml",
     "build:package": "rimraf esm && tsc -p tsconfig.client.json --outDir esm",
     "postinstall": "husky install"
   },
@@ -73,8 +72,8 @@
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@faker-js/faker": "^8.0.2",
-    "@ibabkin/openapi-to-server": "^1.3.10",
-    "@ibabkin/openapi-to-zod": "^1.1.7",
+    "@ibabkin/openapi-to-server": "^1.7.2",
+    "@ibabkin/openapi-to-zod": "^1.2.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
