--- a/package.json
+++ b/package.json
@@ -90,7 +90,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
-    "js-yaml": "^4.1.0",
     "lint-staged": "^13.2.2",
     "moq.ts": "^7.4.1",
     "nodemon": "^2.0.22",
@@ -100,8 +99,7 @@
     "swagger-client": "^3.19.8",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
-    "yaml-import": "^2.0.0"
+    "typescript": "^5.1.3"
   },
   "author": "ibabkin <igba14@gmail.com>",
   "license": "ISC"
