--- a/src/useCase/todo/routes.yaml
+++ b/src/useCase/todo/routes.yaml
@@ -1,4 +1,4 @@
-/inventory:
+/todo/{id}:
   get:
     tags:
       - developers
@@ -6,60 +6,44 @@
     description: |
       By passing in the appropriate options, you can search for
       available inventory in the system
-    operationId: searchInventory
+    operationId: getTodo
     parameters:
-      - name: searchString
-        in: query
+      - name: id
+        in: path
         description: pass an optional search string for looking up inventory
         required: false
-        style: form
-        explode: true
         schema:
           type: string
-      - name: skip
-        in: query
-        description: number of records to skip for pagination
-        required: false
-        style: form
-        explode: true
-        schema:
-          minimum: 0
-          type: integer
-          format: int32
-      - name: limit
-        in: query
-        description: maximum number of records to return
-        required: false
-        style: form
-        explode: true
-        schema:
-          maximum: 50
-          minimum: 0
-          type: integer
-          format: int32
     responses:
       "200":
         description: search results matching criteria
         content:
           application/json:
             schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/InventoryItem'
+              $ref: '#/components/schemas/Todo'
       "400":
         description: bad input parameter
+/todo:
   post:
     tags:
       - admins
     summary: adds an inventory item
     description: Adds an item to the system
-    operationId: addInventory
+    operationId: addTodo
     requestBody:
       description: Inventory item to add
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/InventoryItem'
+            type: 'object'
+            required:
+              - title
+              - description
+            properties:
+              title:
+                type: string
+              description:
+                type: string
     responses:
       "201":
         description: item created
