--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "generate:validators": "openapi-to-zod --input src/swagger.yaml --output src/.generated/validators.ts",
     "generate:format": "prettier --write \"src/.generated/**/*.{js,ts}\" --no-error-on-unmatched-pattern",
     "build:package": "rimraf esm && tsc -p tsconfig.client.json --outDir esm",
-    "postinstall": "husky install && mkdir src/.generated"
+    "postinstall": "husky install"
   },
   "config": {
     "commitizen": {
@@ -31,7 +31,7 @@
     }
   },
   "engines": {
-    "node": "16.20.x"
+    "node": "18.19.x"
   },
   "files": [
     "esm/**/*"
