--- a/src/useCase/todo/routes.yaml
+++ b/src/useCase/todo/routes.yaml
@@ -11,7 +11,7 @@
       - name: id
         in: path
         description: pass an optional search string for looking up inventory
-        required: false
+        required: true
         schema:
           type: string
     responses:
@@ -23,6 +23,43 @@
               $ref: '#/components/schemas/Todo'
       "400":
         description: bad input parameter
+
+  put:
+    tags:
+      - admins
+    summary: adds an inventory item
+    description: Adds an item to the system
+    operationId: updateTodo
+    parameters:
+      - name: id
+        in: path
+        description: pass an optional search string for looking up inventory
+        required: true
+        schema:
+          type: string
+    requestBody:
+      description: Inventory item to add
+      content:
+        application/json:
+          schema:
+            type: 'object'
+            properties:
+              title:
+                type: string
+              description:
+                type: string
+    responses:
+      "200":
+        description: search results matching criteria
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Todo'
+      "400":
+        description: "invalid input, object invalid"
+      "409":
+        description: an existing item already exists
+
 /todo:
   post:
     tags:
