--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "@prisma/client": "^4.15.0",
     "axios": "^1.6.7",
     "body-parser": "~1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "~4.18.2",
     "openapi-types": "^12.1.3",
     "reflect-metadata": "^0.2.2",
     "standard-http-error": "^2.0.1",
-    "ts-ioc-container": "^31.5.1",
+    "ts-ioc-container": "^31.6.0",
     "winston": "^3.9.0",
     "zod": "^3.22.4"
   },
@@ -65,6 +66,7 @@
     "@faker-js/faker": "^8.0.2",
     "@ibabkin/openapi-to-server": "^1.14.0",
     "@ibabkin/openapi-to-zod": "^1.2.15",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
