feat(todo): add delete routes

--- a/src/useCase/todo/routes.yaml
+++ b/src/useCase/todo/routes.yaml
@@ -60,6 +60,25 @@
       "409":
         description: an existing item already exists
 
+  delete:
+    tags:
+      - admins
+    summary: deletes an inventory item
+    description: Deletes an item from the system
+    operationId: deleteTodo
+    parameters:
+      - name: id
+        in: path
+        description: pass an optional search string for looking up inventory
+        required: true
+        schema:
+          type: string
+    responses:
+      "204":
+        description: search results matching criteria
+      "400":
+        description: "invalid input, object invalid"
+
 /todo:
   get:
     tags:
